# ai-notes

./: .gitignore  README.md  pyproject.toml
src/ai_notes/dl/: linreg_from_zero.ipynb
src/notes/: steps.md
src/scikitlearn/: 直播带货.ipynb
src/scikitlearn/.ipynb_checkpoints/: load_dataset-checkpoint.ipynb  直播带货-checkpoint.ipynb
