[tool.poetry]
name = "ai-notes"
version = "0.1.0"
description = ""
authors = ["denniszhou <21563099@qq.com>"]
readme = "README.md"
packages = [{include = "ai_notes", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
